# mu

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
mu/: CMakeLists.txt  README.md  __init__.py
mu/core/: CMakeLists.txt
mu/core/include/: mu.h
mu/core/src/mu/: alpha_beta.h  arch.h  belief.h  dds.h  determinize.h  game_state.h  heuristics.h  ismcts.h  repr.cpp  repr.h  rules.h  search.h  tt.h  whist.h  zobrist.h
mu/core_py/: CMakeLists.txt
mu/core_py/src/: bind.cpp
mu/core_py/src/mu/: __init__.py  agents.py  game.py
mu/test/: CMakeLists.txt
mu/test/src/: core_tests.cpp  dds_tests.cpp  heuristic_tests.cpp  mu_test.cpp  search_tests.cpp
playground/lewismj/: README.md
playground/lewismj/auto_diff/: option_greeks_via_ad.ipynb
playground/lewismj/kdb_course/course-introductory-workshop/: Kx Workshop Session 1 qSQL.ipynb  Kx Workshop Session 2 Joins.ipynb  Kx Workshop Session 3 Data Structures.ipynb  Kx Workshop Session 4 Functions.ipynb  Kx Workshop Session 5 Loading Data And IPC.ipynb
playground/lewismj/kdb_course/course-introductory-workshop/data/: smalltrips.csv  weather.csv
playground/lewismj/kdb_course/course-introductory-workshop/data/taxi/: par.txt  sym
playground/lewismj/kdb_course/course-introductory-workshop/scripts/: loaddata.q  server.q
playground/lewismj/ml_course/1_supervised_learning/week1/: C1_W1_Lab01_Python_Jupyter_Soln.ipynb  C1_W1_Lab02_Model_Representation_Soln.ipynb  C1_W1_Lab03_Cost_function_Soln.ipynb  C1_W1_Lab04_Gradient_Descent_Soln.ipynb
playground/lewismj/ml_course/1_supervised_learning/week2/: C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb  C1_W2_Lab02_Multiple_Variable_Soln.ipynb  C1_W2_Lab03_Feature_Scaling_and_Learning_Rate_Soln.ipynb  C1_W2_Lab04_FeatEng_PolyReg_Soln.ipynb  C1_W2_Lab05_Sklearn_GD_Soln.ipynb  C1_W2_Lab06_Sklearn_Normal_Soln.ipynb  lab_utils_multi.py
playground/lewismj/ml_course/1_supervised_learning/week2_lab/: C1_W2_Linear_Regression.ipynb
playground/lewismj/ml_course/1_supervised_learning/week3/: C1_W3_Lab01_Classification_Soln.ipynb  C1_W3_Lab02_Sigmoid_function_Soln.ipynb  C1_W3_Lab03_Decision_Boundary_Soln.ipynb  C1_W3_Lab04_LogisticLoss_Soln.ipynb  C1_W3_Lab05_Cost_Function_Soln.ipynb  C1_W3_Lab06_Gradient_Descent_Soln.ipynb  C1_W3_Lab07_Scikit_Learn_Soln.ipynb  C1_W3_Lab08_Overfitting_Soln.ipynb  C1_W3_Lab09_Regularization_Soln.ipynb
playground/lewismj/ml_course/1_supervised_learning/week3_lab/: C1_W3_Logistic_Regression.ipynb
playground/lewismj/ml_course/2_advanced_learning_algorithms/week1/: C2_W1_Assignment.ipynb
playground/lewismj/ml_course/2_advanced_learning_algorithms/week2/: C2_W2_Backprop.ipynb  C2_W2_Derivatives.ipynb  C2_W2_Multiclass_TF.ipynb  C2_W2_Relu.ipynb  C2_W2_SoftMax.ipynb
playground/lewismj/ml_course/2_advanced_learning_algorithms/week2_lab/: C2_W2_Assignment.ipynb
playground/lewismj/ml_course/2_advanced_learning_algorithms/week3_lab/: C2_W3_Assignment.ipynb
playground/lewismj/ml_course/2_advanced_learning_algorithms/week4/: C2_W4_Lab_02_Tree_Ensemble.ipynb
playground/lewismj/ml_course/2_advanced_learning_algorithms/week4_lab/: C2_W4_Decision_Tree_with_Markdown.ipynb
playground/lewismj/ml_course/3_unsupervised_learning/week1/: C3_W1_KMeans_Assignment.ipynb
playground/lewismj/ml_course/3_unsupervised_learning/week1_lab/: C3_W1_Anomaly_Detection.ipynb
playground/lewismj/ml_course/3_unsupervised_learning/week2_1/: C3_W2_Collaborative_RecSys_Assignment.ipynb
playground/lewismj/ml_course/3_unsupervised_learning/week2_2/: C3_W2_RecSysNN_Assignment.ipynb
playground/lewismj/ml_course/3_unsupervised_learning/week3_1/: State-action value function example.ipynb
playground/lewismj/ml_course/3_unsupervised_learning/week3_lab/: C3_W3_A1_Assignment.ipynb  lunar_lander_model.h5
playground/lewismj/xva_using_quantlib/: xva_calculator.ipynb
tests/: __init__.py  test_mu.py
